tdf#166805 Escape characters in tooltips (qt5/qt6)

Since we're using styles for tooltips in qt5/qt6, we need to escape the message that will be shown.

Change-Id: I1441363980629fd01e176261d3a00ac3a79310ce
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186117
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Tested-by: Jenkins